qwer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qwer
  labels:
    app: qwer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qwer
  template:
    metadata:
      labels:
        app: qwer
    spec:
      containers:
      - name: qwer
        image: kind-game:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        readinessProbe:
          httpGet: {path: /api/state, port: 443}
        livenessProbe:
          httpGet: {path: /api/state, port: 443}
