qwer/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwer
  labels:
    app: qwer
spec:
  selector:
    app: qwer
  ports:
  - port: 443
    targetPort: 443
  type: ClusterIP
