qwer/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: qwer
  namespace: qwer
spec:
  host: qwer
