qwer/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: qwer
  namespace: qwer
spec:
  hosts:
    - qwer
  http:
    - route:
        - destination:
            host: qwer
            port:
              number: 443
