qwer/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qwer
spec:
  podSelector:
    matchLabels:
      app: qwer
  policyTypes:
    - Ingress
    - Egress
